tests/application/extra-containers/application-outbound-to-auth-proxy.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: extra-containers-client
spec:
  image: image
  port: 8080
  accessPolicy:
    outbound:
      rules:
        - application: extra-containers-proxy
