tests/application/extra-containers/application-files-from-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: extra-containers-files-from
spec:
  template:
    spec:
      containers:
        - name: extra-containers-files-from
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config-map
              mountPath: /etc/config
            - name: secret
              mountPath: /etc/secret
        - name: extra-container
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: extra-container-config-map
              mountPath: /etc/config
            - name: secret
              mountPath: /etc/secret/subpath
              subPath: subpath
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config-map
          configMap:
            name: config-map
        - name: secret
          secret:
            secretName: secret
        - name: extra-container-configmap
          configMap:
            name: extra-container-configmap
